--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "nuxt": "^4.0.3",
+    "swiper": "^11.2.10",
     "vue": "^3.5.20",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-yandex-maps": "^2.2.2",
+    "ymaps": "^0.2.1"
   }
 }
